--- a/mbed_app.json
+++ b/mbed_app.json
@@ -1,3 +1,8 @@
 {
-    "macros": ["MBED_SYS_STATS_ENABLED"]
+    "macros": ["MBED_SYS_STATS_ENABLED"],
+    "target_overrides": {
+        "*": {
+            "platform.stdio-convert-newlines": 1
+        }
+    }
 }
