Updated configuration information (#55)
* Updated README with a configuration section.
* Modified mbed_app.json to use platform.sys-stats-enabled instead of the MBED_SYS_STATS_ENABLED macro.
* Fixed compiler warnings.

--- a/mbed_app.json
+++ b/mbed_app.json
@@ -1,8 +1,7 @@
 {
-    "macros": ["MBED_SYS_STATS_ENABLED"],
     "target_overrides": {
         "*": {
-            "platform.stdio-convert-newlines": 1
+            "platform.sys-stats-enabled": true
         }
     }
 }
